platform/base/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    platform.io/managed: "true"
